# kita_nextcloud_automation

./: .env.example  .gitignore  README.md  analyse.ipynb  backup_tables.py  fetch_data.py  pipeline.py  playground.ipynb  pyproject.toml
nc_tables_api_wrapper/: _client.py  fetch_table.py  table_properties.py  upload_table.py
scripts/: _common.sh  run_backup.sh  run_pipeline.sh
transform/: transform_data.py
