[project]
name            = "kita_nextcloud"
authors         = [{ "name" = "Michael Adams" }]
version         = "0.1.0"
requires-python = ">=3.13"
dependencies    = ["pandas>=2.3.3", "python-dotenv>=1.2.1", "requests>=2.32.5", "tqdm>=4.67.1"]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "ruff>=0.14.5"]

[tool.ruff.lint]
select = ["I", "E", "W", "S"]
ignore = ["E501"]             # line too long
